--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/themes": "^2.1.16",
     "@lexical/react": "^0.16.1",
     "@liveblocks/client": "^2.4.0",
+    "@liveblocks/node": "^2.4.0",
     "@liveblocks/react": "^2.4.0",
     "@liveblocks/react-lexical": "^2.4.0",
     "@liveblocks/react-ui": "^2.4.0",
@@ -22,6 +23,7 @@
     "jsm-editor": "^0.0.12",
     "lexical": "^0.16.1",
     "lucide-react": "^0.424.0",
+    "nanoid": "^5.0.7",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
